Mon Aug 29 09:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/MMAP_Memory_Pool.cpp:
          Fixed bugzilla bug 2216, when an ACE_MMAP_Memory_Pool is created
          using an existing backing store, the ACE_Based_Pointer_repository
          was not updated with the mapped segment information.

          Thanks to Steve Williams <steve at telxio dot com> for reporting
          this and supplying the fix and regression test below.

Mon Aug 29 09:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Based_Pointer_Repository.h:
          Export the based pointer repository from the dll as singleton.
          Fixes bugzilla bug 1919.

        * tests/Based_Pointer_Test.cpp:
        * tests/Based_Pointer_Test_Lib.cpp:
          New test for bugzilla bug 1919. Thanks to Steve Williams
          <steve at telxio dot com> for creating this test

        * tests/run_test.lst:
          Added Based_Pointer_Test

        * tests/tests.mpc:
          Added Based_Pointer_Test

Sun Aug 28 14:25:07 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * ace/Reactor.h:
        * ace/Reactor.cpp:
        * ace/Reactor.inl:
        * ace/Select_Reactor.h:
        * ace/Select_Reactor_Base.h:
        * ace/Select_Reactor_T.cpp:
        * ace/Select_Reactor_T.h:
        * ace/TP_Reactor.cpp:

          The reactor framework in ACE allows plug and play of different
          reactors such as Select, TP, Devpoll etc. The TAO middleware
          implementation and applications that run atop TAO typically use
          one particular implementation of the Reactor. For example, a
          single-threaded application might use select_* reactors. The
          Reactor framework uses the bridge pattern to transparently
          invoke operations on the right reactors. When the concrete
          Reactor is known, it should be possible to specialize the
          framework to use the concrete reactor directly rather than use